// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-plugin-code-tabs does not fold code blocks on different levels 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "checked": null,
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 15,
                      "line": 2,
                      "offset": 15,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 4,
                      "line": 2,
                      "offset": 4,
                    },
                  },
                  "type": "text",
                  "value": "a list here",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 15,
                  "line": 2,
                  "offset": 15,
                },
                "indent": Array [],
                "start": Object {
                  "column": 4,
                  "line": 2,
                  "offset": 4,
                },
              },
              "type": "paragraph",
            },
            Object {
              "attributes": Array [],
              "children": Array [
                Object {
                  "attributes": Array [
                    Object {
                      "name": "language",
                      "type": "mdxBlockAttribute",
                      "value": "plain",
                    },
                    Object {
                      "name": "children",
                      "type": "mdxBlockAttribute",
                      "value": "inside list",
                    },
                    Object {
                      "name": "title",
                      "type": "mdxBlockAttribute",
                      "value": "",
                    },
                    Object {
                      "name": "filename",
                      "type": "mdxBlockAttribute",
                      "value": "",
                    },
                  ],
                  "lang": "plain",
                  "meta": null,
                  "name": "CodeBlock",
                  "position": Position {
                    "end": Object {
                      "column": 7,
                      "line": 5,
                      "offset": 49,
                    },
                    "indent": Array [
                      4,
                      4,
                    ],
                    "start": Object {
                      "column": 4,
                      "line": 3,
                      "offset": 19,
                    },
                  },
                  "type": "mdxBlockElement",
                  "value": "inside list",
                },
              ],
              "name": "CodeTabs",
              "type": "mdxBlockElement",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 7,
              "line": 5,
              "offset": 49,
            },
            "indent": Array [
              1,
              1,
              1,
            ],
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": true,
      "position": Position {
        "end": Object {
          "column": 7,
          "line": 5,
          "offset": 49,
        },
        "indent": Array [
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "spread": false,
      "start": 1,
      "type": "list",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Object {
              "name": "language",
              "type": "mdxBlockAttribute",
              "value": "plain",
            },
            Object {
              "name": "children",
              "type": "mdxBlockAttribute",
              "value": "outside list",
            },
            Object {
              "name": "title",
              "type": "mdxBlockAttribute",
              "value": "",
            },
            Object {
              "name": "filename",
              "type": "mdxBlockAttribute",
              "value": "",
            },
          ],
          "lang": "plain",
          "meta": null,
          "name": "CodeBlock",
          "position": Position {
            "end": Object {
              "column": 4,
              "line": 9,
              "offset": 76,
            },
            "indent": Array [
              1,
              1,
            ],
            "start": Object {
              "column": 1,
              "line": 7,
              "offset": 51,
            },
          },
          "type": "mdxBlockElement",
          "value": "outside list",
        },
      ],
      "name": "CodeTabs",
      "type": "mdxBlockElement",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 10,
      "offset": 77,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-plugin-code-tabs does not fold code blocks split by a paragraph 1`] = `
Object {
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Object {
              "name": "language",
              "type": "mdxBlockAttribute",
              "value": "python",
            },
            Object {
              "name": "children",
              "type": "mdxBlockAttribute",
              "value": "print \\"Hello World!\\"",
            },
            Object {
              "name": "title",
              "type": "mdxBlockAttribute",
              "value": "",
            },
            Object {
              "name": "filename",
              "type": "mdxBlockAttribute",
              "value": "",
            },
          ],
          "lang": "python",
          "meta": null,
          "name": "CodeBlock",
          "position": Position {
            "end": Object {
              "column": 4,
              "line": 4,
              "offset": 35,
            },
            "indent": Array [
              1,
              1,
            ],
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "type": "mdxBlockElement",
          "value": "print \\"Hello World!\\"",
        },
      ],
      "name": "CodeTabs",
      "type": "mdxBlockElement",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 16,
              "line": 6,
              "offset": 52,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 6,
              "offset": 37,
            },
          },
          "type": "text",
          "value": "some text here:",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 16,
          "line": 6,
          "offset": 52,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 6,
          "offset": 37,
        },
      },
      "type": "paragraph",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Object {
              "name": "language",
              "type": "mdxBlockAttribute",
              "value": "javascript",
            },
            Object {
              "name": "children",
              "type": "mdxBlockAttribute",
              "value": "console.log(\\"Hello World!\\");",
            },
            Object {
              "name": "title",
              "type": "mdxBlockAttribute",
              "value": "",
            },
            Object {
              "name": "filename",
              "type": "mdxBlockAttribute",
              "value": "",
            },
          ],
          "lang": "javascript",
          "meta": null,
          "name": "CodeBlock",
          "position": Position {
            "end": Object {
              "column": 4,
              "line": 10,
              "offset": 100,
            },
            "indent": Array [
              1,
              1,
            ],
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 54,
            },
          },
          "type": "mdxBlockElement",
          "value": "console.log(\\"Hello World!\\");",
        },
      ],
      "name": "CodeTabs",
      "type": "mdxBlockElement",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 11,
      "offset": 101,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-plugin-code-tabs folds two code blocks 1`] = `
Object {
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Object {
              "name": "language",
              "type": "mdxBlockAttribute",
              "value": "python",
            },
            Object {
              "name": "children",
              "type": "mdxBlockAttribute",
              "value": "print \\"Hello World!\\"",
            },
            Object {
              "name": "title",
              "type": "mdxBlockAttribute",
              "value": "",
            },
            Object {
              "name": "filename",
              "type": "mdxBlockAttribute",
              "value": "",
            },
          ],
          "lang": "python",
          "meta": null,
          "name": "CodeBlock",
          "position": Position {
            "end": Object {
              "column": 4,
              "line": 4,
              "offset": 35,
            },
            "indent": Array [
              1,
              1,
            ],
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "type": "mdxBlockElement",
          "value": "print \\"Hello World!\\"",
        },
        Object {
          "attributes": Array [
            Object {
              "name": "language",
              "type": "mdxBlockAttribute",
              "value": "javascript",
            },
            Object {
              "name": "children",
              "type": "mdxBlockAttribute",
              "value": "console.log(\\"Hello World!\\");",
            },
            Object {
              "name": "title",
              "type": "mdxBlockAttribute",
              "value": "",
            },
            Object {
              "name": "filename",
              "type": "mdxBlockAttribute",
              "value": "",
            },
          ],
          "lang": "javascript",
          "meta": null,
          "name": "CodeBlock",
          "position": Position {
            "end": Object {
              "column": 4,
              "line": 8,
              "offset": 83,
            },
            "indent": Array [
              1,
              1,
            ],
            "start": Object {
              "column": 1,
              "line": 6,
              "offset": 37,
            },
          },
          "type": "mdxBlockElement",
          "value": "console.log(\\"Hello World!\\");",
        },
      ],
      "name": "CodeTabs",
      "type": "mdxBlockElement",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 9,
      "offset": 84,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-plugin-code-tabs supports filenames 1`] = `
Object {
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Object {
              "name": "language",
              "type": "mdxBlockAttribute",
              "value": "plain",
            },
            Object {
              "name": "children",
              "type": "mdxBlockAttribute",
              "value": "first",
            },
            Object {
              "name": "title",
              "type": "mdxBlockAttribute",
              "value": "Hello",
            },
            Object {
              "name": "filename",
              "type": "mdxBlockAttribute",
              "value": "hello.txt",
            },
          ],
          "lang": "plain",
          "meta": "{tabTitle: Hello} {filename: hello.txt}",
          "name": "CodeBlock",
          "position": Position {
            "end": Object {
              "column": 4,
              "line": 4,
              "offset": 59,
            },
            "indent": Array [
              1,
              1,
            ],
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "type": "mdxBlockElement",
          "value": "first",
        },
        Object {
          "attributes": Array [
            Object {
              "name": "language",
              "type": "mdxBlockAttribute",
              "value": "plain",
            },
            Object {
              "name": "children",
              "type": "mdxBlockAttribute",
              "value": "second",
            },
            Object {
              "name": "title",
              "type": "mdxBlockAttribute",
              "value": "Goodbye",
            },
            Object {
              "name": "filename",
              "type": "mdxBlockAttribute",
              "value": "goodbye.txt",
            },
          ],
          "lang": "plain",
          "meta": "{tabTitle: Goodbye} {filename: goodbye.txt}",
          "name": "CodeBlock",
          "position": Position {
            "end": Object {
              "column": 4,
              "line": 8,
              "offset": 124,
            },
            "indent": Array [
              1,
              1,
            ],
            "start": Object {
              "column": 1,
              "line": 6,
              "offset": 61,
            },
          },
          "type": "mdxBlockElement",
          "value": "second",
        },
      ],
      "name": "CodeTabs",
      "type": "mdxBlockElement",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 9,
      "offset": 125,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-plugin-code-tabs supports tab titles 1`] = `
Object {
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Object {
              "name": "language",
              "type": "mdxBlockAttribute",
              "value": "plain",
            },
            Object {
              "name": "children",
              "type": "mdxBlockAttribute",
              "value": "first",
            },
            Object {
              "name": "title",
              "type": "mdxBlockAttribute",
              "value": "Hello",
            },
            Object {
              "name": "filename",
              "type": "mdxBlockAttribute",
              "value": "",
            },
          ],
          "lang": "plain",
          "meta": "{tabTitle: Hello}",
          "name": "CodeBlock",
          "position": Position {
            "end": Object {
              "column": 4,
              "line": 4,
              "offset": 37,
            },
            "indent": Array [
              1,
              1,
            ],
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "type": "mdxBlockElement",
          "value": "first",
        },
        Object {
          "attributes": Array [
            Object {
              "name": "language",
              "type": "mdxBlockAttribute",
              "value": "plain",
            },
            Object {
              "name": "children",
              "type": "mdxBlockAttribute",
              "value": "second",
            },
            Object {
              "name": "title",
              "type": "mdxBlockAttribute",
              "value": "Goodbye",
            },
            Object {
              "name": "filename",
              "type": "mdxBlockAttribute",
              "value": "",
            },
          ],
          "lang": "plain",
          "meta": "{tabTitle: Goodbye}",
          "name": "CodeBlock",
          "position": Position {
            "end": Object {
              "column": 4,
              "line": 8,
              "offset": 78,
            },
            "indent": Array [
              1,
              1,
            ],
            "start": Object {
              "column": 1,
              "line": 6,
              "offset": 39,
            },
          },
          "type": "mdxBlockElement",
          "value": "second",
        },
      ],
      "name": "CodeTabs",
      "type": "mdxBlockElement",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 9,
      "offset": 79,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
